<resources>
    <string name="app_name">My Application</string>
    <string name="analise">Análise de Perfil de Investidores</string>
    <string name="iniciar">Iniciar Análise</string>
    <string name="hint">Insira seu nome</string>
    <string name="próximo">Próximo</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="Pergunta1">Por quanto tempo você pretende deixar seu dinheiro investido?</string>
    <string name="Opcao11">Menos de 6 meses</string>
    <string name="Opcao12">Entre 6 meses e 1 ano </string>
    <string name="Opcao13">Entre 1 ano e 3 anos</string>
    <string name="Opcao14">Acima de 3 anos</string>

    <string name="Pergunta2">Qual o objetivo desse investimento? </string>
    <string name="Opcao21">Preservação do capital para não perder valor ao longo do tempo, baixos riscos de perdas</string>
    <string name="Opcao22">Aumento gradual do capital ao longo do tempo, assumindo riscos moderados </string>
    <string name="Opcao23">Aumento do capital acima da taxa de retorno média do mercado, mesmo que isso implique assumir riscos de perdas elevadas</string>
    <string name="Opcao24">Obter no curto prazo retornos elevados e significativamente acima da taxa de retorno média do mercado, assumindo riscos elevados</string>

    <string name="Pergunta3">Qual das alternativas melhor classifica sua formação e experiência com o mercado financeiro? </string>
    <string name="Opcao31">Não possuo formação acadêmica ou conhecimento do mercado financeiro</string>
    <string name="Opcao32">Possuo formação acadêmica na área financeira, mas não tenho experiência com o mercado financeiro</string>
    <string name="Opcao33">Possuo formação acadêmica em outra área, mas possuo conhecimento do mercado financeiro</string>
    <string name="Opcao34">Possuo formação acadêmica na área financeira ou pleno conhecimento do mercado financeiro</string>

    <string name="Pergunta4">Considerando seus rendimentos regulares, qual a porcentagem você pretende reservar para aplicações financeiras? </string>
    <string name="Opcao41">No máximo 35%</string>
    <string name="Opcao42">Entre 25,01 e 50%</string>
    <string name="Opcao43">Acima de 50%</string>

    <string name="Pergunta5"> Caso as suas aplicações sofressem uma queda superior a 30%,
    o que você faria? </string>
    <string name="Opcao51">Resgataria toda a aplicação e aplicaria na poupança</string>
    <string name="Opcao52">Manteria aplicação aguardando uma melhora do mercado</string>
    <string name="Opcao53"> Aumentaria a aplicação para aproveitar as oportunidades do mercado </string>

    <string name="Pergunta6"> Como está distribuído o seu patrimônio? </string>
    <string name="Opcao61">Meu patrimônio não está aplicado ou está todo aplicado em renda fixa e/ou imóveis</string>
    <string name="Opcao62">Menos de 25% em renda variável e o restante em renda fixa e/ou imóveis </string>
    <string name="Opcao63"> Entre 25,01 e 50% aplicado em renda variável e o restante em renda fixa e/ou imóveis</string>
    <string name="Opcao64">Acima de 50% em renda variável</string>

    <string name="Pergunta7"> Em relação as aplicações e rendimentos, em qual dessas situações você
 se enquadra?</string>
    <string name="Opcao71">Conto com o rendimento dessas aplicações para complementar minha
renda mensal</string>
    <string name="Opcao72">Eventualmente posso resgatar parte das aplicações para fazer frente aos
meus gastos. Contudo, não tenho intenção de resgatar no curto prazo e
pretendo fazer aplicações regulares</string>
    <string name="Opcao73">Não tenho intenção de resgatar no curto prazo, mas não pretendo realizar
novas aplicações</string>
    <string name="Opcao74">Não tenho intenção de resgatar no curto prazo e ainda pretendo fazer
aplicações regulares.</string>

    <string name="Pergunta8">Qual sua faixa de renda mensal média?
</string>
    <string name="Opcao81">Até R$ 1.000</string>
    <string name="Opcao82">De R$ 1.001 até R$ 5.000 </string>
    <string name="Opcao83">De R$ 5.001 até R$ 10.000</string>
    <string name="Opcao84">Acima de R$ 10.000</string>

    <string name="Pergunta9">Qual o valor aproximado do seu patrimônio?
</string>
    <string name="Opcao91">Até R$ 10.0000</string>
    <string name="Opcao92">De R$ 10.001 até R$ 100.000 </string>
    <string name="Opcao93">De R$ 100.001 até R$ 500.000</string>
    <string name="Opcao94">De R$ 500.001 até R$ 1.000.000</string>
    <string name="Opcao95">Acima de R$ 1.000.001</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ref">Este projeto foi realizado para o Assessment das disciplinas
        de desenvolvimento em Android, com previsão de entrega para o dia 31/01/2020,
        onde as perguntas do quiz foram adptadas da metodologia
        utilizada pelo questionário do Banco Paulista</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_final">Final</string>
    <string name="logo">Logo</string>
    <string name="maisInfo">Quer saber mais? </string>
    <string name="infoSub">Entre em contato conosco pela nossa central de atendimento!</string>
    <string name="btnLigar">Ligar</string>
    <string name="title_activity_another">AnotherActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_second">secondActivity</string>
    <string name="end">Endereço</string>
    <string name="ag">Agência</string>
    <string name="tel">Telefone</string>
    <string name="instrucoes">Como fazer o questionário?\n\nVocê deve selecionar uma opção para cada pergunta. Ao fim do questionário, calcularemos sua resposta e informaremos qual é o seu perfil de investidor.</string>
    <string name="faq">FAQ</string>


</resources>




