<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".fragments.pergunta8">

    <TextView
        android:id="@+id/pergunta8"
        style="@style/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pergunta8" />

    <RadioGroup
        android:id="@+id/radioGroup8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/a8"
            style="@style/opcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Opcao81" />

        <RadioButton
            android:id="@+id/b8"
            style="@style/opcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Opcao82" />

        <RadioButton
            android:id="@+id/c8"
            style="@style/opcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Opcao83" />

        <RadioButton
            android:id="@+id/d8"
            style="@style/opcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Opcao84" />

    </RadioGroup>

    <Button
        android:id="@+id/prox8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/próximo"
        android:padding="8dp"/>

</LinearLayout>