<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:gravity="center_vertical"
    android:orientation="vertical">

    tools:context=".fragments.pergunta6">

    <TextView
        android:id="@+id/pergunta6"
        style="@style/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pergunta6" />

    <RadioGroup
        android:id="@+id/radioGroup6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/a6"
            style="@style/opcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Opcao61" />

        <RadioButton
            android:id="@+id/b6"
            style="@style/opcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Opcao62" />

        <RadioButton
            android:id="@+id/c6"
            style="@style/opcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Opcao63"/>

        <RadioButton
            android:id="@+id/d6"
            style="@style/opcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Opcao64" />

    </RadioGroup>

    <Button
        android:id="@+id/prox6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/próximo"
        android:padding="8dp"/>

</LinearLayout>